language/move-prover/tests/sources/functional/pack_unpack.exp
Move prover returns: exiting with boogie verification errors
error: data invariant does not hold

    ┌── tests/sources/functional/pack_unpack.move:18:9 ───
    │
 18 │         invariant value > 0;
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/pack_unpack.move:129:5: call_public_violating_invariant_incorrect
    =         r = <redacted>
    =     at tests/sources/functional/pack_unpack.move:134:5: public_update_value
    =         s = <redacted>,
    =         v = <redacted>

error: data invariant does not hold

    ┌── tests/sources/functional/pack_unpack.move:18:9 ───
    │
 18 │         invariant value > 0;
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/pack_unpack.move:102:5: move_ref_unchanged_invariant_incorrect
    =         r1 = <redacted>,
    =         r2 = <redacted>
    =     at tests/sources/functional/pack_unpack.move:103:43: move_ref_unchanged_invariant_incorrect

error: data invariant does not hold for value extracted from reference

     ┌── tests/sources/functional/pack_unpack.move:171:31 ───
     │
 171 │         read_S_from_immutable(s)
     │                               ^
     │
     =     at tests/sources/functional/pack_unpack.move:169:5: private_pass_value_violating_invariant_incorrect
     =         s = <redacted>

error: data invariant does not hold for value extracted from reference

     ┌── tests/sources/functional/pack_unpack.move:161:31 ───
     │
 161 │         read_S_from_immutable(&r.nested)
     │                               ^^^^^^^^^
     │
     =     at tests/sources/functional/pack_unpack.move:159:5: private_select_value_violating_invariant_incorrect
     =         r = <redacted>

error: data invariant does not hold for value extracted from reference

     ┌── tests/sources/functional/pack_unpack.move:148:31 ───
     │
 148 │         read_S_from_immutable(s)
     │                               ^
     │
     =     at tests/sources/functional/pack_unpack.move:145:5: select_value_violating_invariant_incorrect
     =         r = <redacted>,
     =         s = <redacted>
     =     at tests/sources/functional/pack_unpack.move:147:9: select_value_violating_invariant_incorrect

error: data invariant does not hold

    ┌── tests/sources/functional/pack_unpack.move:18:9 ───
    │
 18 │         invariant value > 0;
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/pack_unpack.move:195:5: update_via_returned_ref_invariant_incorrect
    =         r = <redacted>,
    =         v_ref = <redacted>
    =     at tests/sources/functional/pack_unpack.move:196:17: update_via_returned_ref_invariant_incorrect
    =     at tests/sources/functional/pack_unpack.move:197:35: update_via_returned_ref_invariant_incorrect
    =     at tests/sources/functional/pack_unpack.move:186:5: get_value_ref
    =         r = <redacted>,
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/pack_unpack.move:187:9: get_value_ref
    =     at tests/sources/functional/pack_unpack.move:186:9: get_value_ref
    =     at tests/sources/functional/pack_unpack.move:197:13: update_via_returned_ref_invariant_incorrect
    =     at tests/sources/functional/pack_unpack.move:198:18: update_via_returned_ref_invariant_incorrect

error: post-condition does not hold

     ┌── tests/sources/functional/pack_unpack.move:211:9 ───
     │
 211 │         ensures s_sum == old(s_sum) + 2;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/pack_unpack.move:202:5: update_via_returned_ref_var_incorrect
     =         r = <redacted>,
     =         v_ref = <redacted>,
     =         result = <redacted>
     =     at tests/sources/functional/pack_unpack.move:203:17: update_via_returned_ref_var_incorrect
     =     at tests/sources/functional/pack_unpack.move:204:35: update_via_returned_ref_var_incorrect
     =     at tests/sources/functional/pack_unpack.move:186:5: get_value_ref
     =         r = <redacted>,
     =         result_1 = <redacted>,
     =         result_2 = <redacted>
     =     at tests/sources/functional/pack_unpack.move:187:9: get_value_ref
     =     at tests/sources/functional/pack_unpack.move:186:9: get_value_ref
     =     at tests/sources/functional/pack_unpack.move:204:13: update_via_returned_ref_var_incorrect
     =     at tests/sources/functional/pack_unpack.move:205:18: update_via_returned_ref_var_incorrect
     =     at tests/sources/functional/pack_unpack.move:206:9: update_via_returned_ref_var_incorrect
